# JaneStreetForecastingChallenge

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  lightGBM.ipynb  pyproject.toml  ridge_regression_baseline.ipynb
configs/data/: default.yaml
configs/experiments/: exp001_lgbm_baseline.yaml  exp002_xgb_baseline.yaml  exp003_catboost_baseline.yaml  exp004_ensemble.yaml
configs/features/: default.yaml
configs/inference/: default.yaml
configs/models/: catboost_baseline.yaml  lgbm_baseline.yaml  xgb_baseline.yaml
configs/train/: default.yaml
notebooks/: 01_eda.ipynb  02_feature_audit.ipynb  03_error_analysis.ipynb
src/janestreet_forecasting/: __init__.py  logging_utils.py  paths.py  settings.py
src/janestreet_forecasting/cli/: __init__.py  build_features.py  evaluate.py  infer.py  prepare_data.py  train.py  tune.py
src/janestreet_forecasting/data/: __init__.py  loaders.py  schemas.py  splits.py  validation.py
src/janestreet_forecasting/evaluation/: __init__.py  backtest.py  diagnostics.py  reports.py
src/janestreet_forecasting/features/: __init__.py  base.py  cross_features.py  lag_features.py  pipelines.py  rolling_features.py
src/janestreet_forecasting/inference/: __init__.py  kaggle_adapter.py  predict.py  serve_local.py  state.py
src/janestreet_forecasting/modeling/: __init__.py  baselines.py  calibration.py  datasets.py  ensemble.py  metrics.py  objectives.py  train_catboost.py  train_lgbm.py  train_xgb.py
src/janestreet_forecasting/tuning/: __init__.py  optuna_runner.py
tests/: conftest.py  test_features.py  test_inference_state.py  test_integration.py  test_metrics.py  test_splits.py
